# libjdx

./: .gitignore  .gitlab-ci-lib-cpp.yml  .gitlab-ci.yml  CMakeLists.txt  README.md  Scratchpad.md  coverage.sh
.github/workflows/: linux_gcc.yml  wasm_emcc.yml
apps/: CMakeLists.txt  Main.cpp
cmake/: clang-dev-tools.cmake  coverage.cmake
doc/: README.md
doc/jdx/: DataHierarchy.dia  README.md
example/: README.md
example-js/: index.html  serve_emrun.sh  serve_python2.sh  serve_python3.sh  wasm.js  worker.js
example/cpp/: CMakeLists.txt  Main.cpp
example/js/: .gitignore  README.md  index.js  package-lock.json  package.json
example/js/public/: worker.js
examples/: LICENSE.md  README.md
examples/cpp/: CMakeLists.txt  Main.cpp  README.md
examples/js/: README.md  index.js  package-lock.json  package.json
examples/js/public/: index.html  index.js  worker.js
include/api/: Converter.hpp  ConverterService.hpp  DataMapper.hpp  DataScanner.hpp  FileParser.hpp  FileParserSelector.hpp  KeyValueParam.hpp  Node.hpp  Node2.hpp  PeakTable.hpp  Point2D.hpp  Scanner.hpp  Table.hpp
include/api/jdx/: JdxBlockNode.hpp
include/io/: BinaryReader.hpp  BufferedTextReader.hpp  Endianness.hpp  SimpleTextReader.hpp  StringPrefixNumericType.hpp  StringPrefixType.hpp  TextReader.hpp
include/jdx/: AuditTrail.hpp  AuditTrailEntry.hpp  Block.hpp  BlockParseException.hpp  BrukerRelaxSection.hpp  BrukerSpecificParameters.hpp  BrukerSpecificSection.hpp  BufferedTextReader.hpp  Data2D.hpp  DataLdr.hpp  DataTable.hpp  JdxParser.hpp  Ldr.hpp  LdrContainer.hpp  NTuples.hpp  NTuplesAttributes.hpp  Page.hpp  ParseException.hpp  Peak.hpp  PeakAssignment.hpp  PeakAssignments.hpp  PeakTable.hpp  RaData.hpp  RaParameters.hpp  SimpleTextReader.hpp  StringLdr.hpp  TabularData.hpp  TextReader.hpp  XyBase.hpp  XyData.hpp  XyParameters.hpp  XyPoints.hpp
include/jdx/api/: JdxBlockNode.hpp  JdxConverter.hpp  JdxData2DNode.hpp  JdxDataMapper.hpp  JdxDataScanner.hpp  JdxFileParser.hpp  JdxScanner.hpp
include/stub/: StubFileParser.hpp  StubNode.hpp
js/api/: index.html  serve_emrun.sh  serve_python3.sh  worker.js
lib/catch2/: CMakeLists.txt
lib/trompeloeil/: CMakeLists.txt
src/: CMakeLists.txt
src/api/: CMakeLists.txt  Converter.cpp  ConverterService.cpp  DataMapper.cpp  DataScanner.cpp  ExceptionUtils.cpp  FileParser.cpp  FileParserSelector.cpp  JdxBlockNode.cpp  JdxData2DNode.cpp  KeyValueParam.cpp  Node.cpp  Node2.cpp  PeakTable.cpp  Point2D.cpp  Scanner.cpp  Table.cpp
src/io/: BinaryReader.cpp  BufferedTextReader.cpp  CMakeLists.txt  SimpleTextReader.cpp
src/jdx/: AuditTrail.cpp  Block.cpp  BlockParseException.cpp  BrukerRelaxSection.cpp  BrukerSpecificParameters.cpp  BrukerSpecificSection.cpp  BufferedTextReader.cpp  CMakeLists.txt  Data2D.cpp  DataLdr.cpp  DataTable.cpp  JdxParser.cpp  Ldr.cpp  LdrContainer.cpp  NTuples.cpp  Page.cpp  ParseException.cpp  PeakAssignments.cpp  PeakTable.cpp  RaData.cpp  SimpleTextReader.cpp  StringLdr.cpp  TabularData.cpp  TextReader.cpp  XyBase.cpp  XyData.cpp  XyPoints.cpp
src/jdx/api/: JdxBlockNode.cpp  JdxConverter.cpp  JdxData2DNode.cpp  JdxDataMapper.cpp  JdxDataScanner.cpp  JdxFileParser.cpp  JdxScanner.cpp
src/jdx/util/: AuditTrailParser.cpp  AuditTrailParser.hpp  DataParser.cpp  DataParser.hpp  LdrUtils.cpp  LdrUtils.hpp  MultilineTuplesParser.cpp  MultilineTuplesParser.hpp  PeakAssignmentsParser.cpp  PeakAssignmentsParser.hpp  PeakTableParser.cpp  PeakTableParser.hpp  StringUtils.cpp  StringUtils.hpp  TuplesParser.cpp  TuplesParser.hpp
src/sf/: CMakeLists.txt  Wrapper.cpp
src/stub/: CMakeLists.txt  StubFileParser.cpp  StubNode.cpp
src/wrapper/: CMakeLists.txt  Wrapper.cpp
tests/: CMakeLists.txt
tests/api/: CMakeLists.txt  ConverterServiceTest.cpp  FileParserSelectorTest.cpp  JdxFileParserTest.cpp
tests/io/: BinaryReaderTest.cpp  BufferedTextReaderTest.cpp  CMakeLists.txt  SimpleTextReaderTest.cpp
tests/jdx/: AuditTrailTest.cpp  BlockTest.cpp  BrukerRelaxSectionTest.cpp  BrukerSpecificParametersTest.cpp  BufferedTextReaderTest.cpp  CMakeLists.txt  DataParserTest.cpp  IntegrationTest.cpp  JdxParserTest.cpp  LdrUtilsTest.cpp  NTuplesTest.cpp  PeakAssignmentsTest.cpp  PeakTableTest.cpp  RaDataTest.cpp  StringLdrTest.cpp  StringUtilsTest.cpp  TextReaderTest.cpp  XyDataTest.cpp  XyPointsTest.cpp
tests/jdx/api/: JdxConverterTest.cpp  JdxDataMapperTest.cpp  JdxDataScannerTest.cpp  JdxFileParserTest.cpp  JdxScannerTest.cpp
tests/jdx/resources/: Bruker_specific.jdx  Bruker_specific_relax.jdx  CompoundFile.jdx  SimpleFile.jdx
tests/stub/: CMakeLists.txt  StubFileParserTest.cpp  StubNodeTest.cpp
